--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  transition: all 0.5s;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.box {
+  margin: 0 auto;
+  width: 600px;
+  padding: 15px;
+  border: 1px solid white;
+  text-align: center;
+  background-color: white;
+  box-shadow: 0px 0px 20px black;
+}
+
+h1 {
+  font-size: 50px;
+  font-weight: 900;
+}
+
+button {
+  margin: 10px;
+  width: 120px;
+  padding: 12px;
+  margin-top: 100px;
+  cursor: pointer;
+  background-color: transparent;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+button:hover {
+  background-color: black;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
